# sysrepo-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  install_sysrepo_deps.sh
include/: Connector.h  DaemonStateMonitor.h  FormData.h  MainWindow.h  ModulesLister.h  SysrepoConnector.h  SysrepoConnector.hpp  SysrepoViewer.h  SysrepodStateMonitor.h  Util.h
src/: Connector.cpp  DaemonStateMonitor.cpp  FormData.cpp  MainWindow.cpp  ModulesLister.cpp  SysrepoConnector.cpp  SysrepoViewer.cpp  SysrepodStateMonitor.cpp  Util.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
ui/: MainWindow.ui
